[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/2K Lightweight.png" type="Texture" id=1]
[ext_resource path="res://truenorg.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Script/ItemContainer.gd" type="Script" id=3]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 814.995, 143.294, 289.53, 98.0468 )
margin_left = 17.6164
margin_right = 17.2929
margin_top = 18.4091
margin_bottom = 20.7709

[sub_resource type="DynamicFont" id=2]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="EmptyContainer" type="MarginContainer"]
anchor_right = 0.310937
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 0
custom_constants/margin_bottom = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_right = -12.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer"]
margin_right = 572.0
grow_horizontal = 0
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/HBoxContainer"]
visible = false
margin_right = 188.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "Number"
valign = 3

[node name="Label2" type="Label" parent="NinePatchRect/MarginContainer/HBoxContainer"]
visible = false
margin_right = 284.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "Player"
align = 1
valign = 3

[node name="Label3" type="Label" parent="NinePatchRect/MarginContainer/HBoxContainer"]
visible = false
margin_right = 572.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "Points"
align = 2
valign = 3
